--- a/hm-service/src/main/resources/application.yaml
+++ b/hm-service/src/main/resources/application.yaml
@@ -29,8 +29,8 @@ knife4j:
   openapi:
     title: 黑马商城接口文档
     description: "黑马商城接口文档"
-    email: zhanghuyi@itcast.cn
-    concat: 虎哥
+    email: dyu32345@gmail.com
+    concat: dy
     url: https://www.itcast.cn
     version: v1.0.0
     group:
