--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -43,4 +43,9 @@ knife4j:
         api-rule-resources:
           - com.hmall.cart.controller
 
+
+feign:
+  okhttp:
+    enabled: true # 开启OKHttp功能
+
 # keytool -genkeypair -alias hmall -keyalg RSA -keypass hmall123 -keystore hmall.jks -storepass hmall123
