--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -22,7 +22,7 @@ mybatis-plus:
       id-type: auto
 logging:
   level:
-    com.hmall.cart: debug
+    com.hmall: debug
   pattern:
     dateformat: HH:mm:ss:SSS
   file:
