--- a/trade-service/pom.xml
+++ b/trade-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>user-service</artifactId>
+    <artifactId>trade-service</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -25,27 +25,13 @@
             <version>1.0.0</version>
         </dependency>
 
-        <!--api-->
-        <dependency>
-            <groupId>com.heima</groupId>
-            <artifactId>hm-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+
         <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--加密-->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-crypto</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-rsa</artifactId>
-            <version>1.0.9.RELEASE</version>
-        </dependency>
+
         <!--数据库-->
         <dependency>
             <groupId>mysql</groupId>
@@ -57,11 +43,26 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
 
-       <!-- nacos 服务注册发现-->
+        <!--nacos 服务注册发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+        <!--OK http 的依赖 -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+
+        <!--黑马 API-->
+        <dependency>
+            <artifactId>hm-api</artifactId>
+            <groupId>com.heima</groupId>
+            <version>1.0.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -72,5 +73,7 @@
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
