--- a/trade-service/src/main/resources/application.yaml
+++ b/trade-service/src/main/resources/application.yaml
@@ -1,18 +1,18 @@
 server:
-  port: 8083
+  port: 8084
 spring:
   application:
-    name: user-service
+    name: hm-service
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://${hm.db.host}:3306/hm-user?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${hm.db.host}:3306/hm-trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ${hm.db.pw}
-  cloud:  # 另外加的?
+  cloud:
     nacos:
-      server-addr: 192.168.147.129 # nacos地址
+      server-addr: 192.168.147.129:8848
 mybatis-plus:
   configuration:
     default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
@@ -30,8 +30,8 @@ logging:
 knife4j:
   enable: true
   openapi:
-    title: 黑马商城用户管理接口文档
-    description: "黑马商城用户管理接口文档"
+    title: 黑马商城订单接口文档
+    description: "黑马商城订单接口文档"
     email: dyu32345@gmail.com
     concat: dy
     url: https://www.itcast.cn
@@ -41,17 +41,9 @@ knife4j:
         group-name: default
         api-rule: package
         api-rule-resources:
-          - com.hm.user.controller
-hm:
-  jwt:
-    location: classpath:hmall.jks
-    alias: hmall
-    password: hmall123
-    tokenTTL: 30m
-  auth:
-    excludePaths:
-      - /search/**
-      - /users/login
-      - /items/**
-      - /hi
+          - com.hmall.trade.controller
+feign:
+  okhttp:
+    enabled: true # 开启OKHttp功能
+
 # keytool -genkeypair -alias hmall -keyalg RSA -keypass hmall123 -keystore hmall.jks -storepass hmall123
