--- a/pay-service/src/main/resources/application.yaml
+++ b/pay-service/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
 server:
-  port: 8084
+  port: 8085
 spring:
   application:
-    name: trade-service
+    name: pay-service
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://${hm.db.host}:3306/hm-trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${hm.db.host}:3306/hm-pay?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ${hm.db.pw}
@@ -30,8 +30,8 @@ logging:
 knife4j:
   enable: true
   openapi:
-    title: 黑马商城订单接口文档
-    description: "黑马商城订单接口文档"
+    title: 黑马商城支付接口文档
+    description: "黑马商城支付接口文档"
     email: dyu32345@gmail.com
     concat: dy
     url: https://www.itcast.cn
@@ -41,7 +41,7 @@ knife4j:
         group-name: default
         api-rule: package
         api-rule-resources:
-          - com.hmall.trade.controller
+          - com.hmall.pay.controller
 feign:
   okhttp:
     enabled: true # 开启OKHttp功能
