--- a/hm-gateway/src/main/resources/application.yml
+++ b/hm-gateway/src/main/resources/application.yml
@@ -28,3 +28,16 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/users/**,/addresses/**
+
+hm:
+  jwt:
+    location: classpath:hmall.jks
+    alias: hmall
+    password: hmall123
+    tokenTTL: 30m
+  auth:
+    excludePaths:
+      - /search/**
+      - /users/login
+      - /items/**
+      - /hi
