--- a/hm-api/pom.xml
+++ b/hm-api/pom.xml
@@ -20,6 +20,12 @@
 
 
     <dependencies>
+        <!--common-->
+        <dependency>
+            <groupId>com.heima</groupId>
+            <artifactId>hm-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <!--openFeign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
