--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -1,47 +1,9 @@
 server:
   port: 8083
-spring:
-  application:
-    name: user-service
-  profiles:
-    active: dev
-  datasource:
-    url: jdbc:mysql://${hm.db.host}:3306/hm-user?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: ${hm.db.pw}
-  cloud:  # 另外加的?
-    nacos:
-      server-addr: 101.133.130.46 # nacos地址
-mybatis-plus:
-  configuration:
-    default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
-  global-config:
-    db-config:
-      update-strategy: not_null
-      id-type: auto
-logging:
-  level:
-    com.hmall: debug
-  pattern:
-    dateformat: HH:mm:ss:SSS
-  file:
-    path: "logs/${spring.application.name}"
-knife4j:
-  enable: true
-  openapi:
-    title: 黑马商城用户管理接口文档
-    description: "黑马商城用户管理接口文档"
-    email: dyu32345@gmail.com
-    concat: dy
-    url: https://www.itcast.cn
-    version: v1.0.0
-    group:
-      default:
-        group-name: default
-        api-rule: package
-        api-rule-resources:
-          - com.hm.user.controller
+feign:
+  okhttp:
+    enabled: true # 开启OKHttp功能
+
 hm:
   jwt:
     location: classpath:hmall.jks
@@ -54,4 +16,10 @@ hm:
       - /users/login
       - /items/**
       - /hi
+
+  swagger:
+    title: 用户服务接口文档
+    package: com.hm.user.controller
+  db:
+    database: hm-user
 # keytool -genkeypair -alias hmall -keyalg RSA -keypass hmall123 -keystore hmall.jks -storepass hmall123
