--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -49,6 +49,12 @@ feign:
     enabled: true # 开启OKHttp功能
 
 
+spring:
+  cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8090
+      http-method-specify: true # 开启请求方式前缀
 hm:
   swagger:
     title: 购物车服务接口文档
